objects/Agent_Tools__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the Agent Tool active?</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agent_Tool_Label__c</fullName>
        <description>The label used to display a Tool in the User Interface.</description>
        <label>Agent Tool Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_Label__c</fullName>
        <description>A label for the category of an Agent Tool.</description>
        <label>Category Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agent News</fullName>
                </value>
                <value>
                    <fullName>Case-Specific Tools</fullName>
                </value>
                <value>
                    <fullName>Core Tools</fullName>
                </value>
                <value>
                    <fullName>Help Content</fullName>
                </value>
                <value>
                    <fullName>Other Tools</fullName>
                </value>
                <value>
                    <fullName>Universal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>The category of an Agent Tool.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Universal Tools</fullName>
                </value>
                <value>
                    <fullName>Restricted Tools</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Custom_Error_Message__c</fullName>
        <label>Custom Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Open_Link_In__c</fullName>
        <description>Where should the Agent Tool url be opened?</description>
        <label>Open Link In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Tab</fullName>
                </value>
                <value>
                    <fullName>Sub Tab</fullName>
                </value>
                <value>
                    <fullName>New Window</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PERF_URL__c</fullName>
        <description>PERF URL for the Agent Tool.</description>
        <inlineHelpText>This is the URL that will be used in the PERF (Performance) environment.</inlineHelpText>
        <label>PERF URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Production_URL__c</fullName>
        <description>Production URL of the Agent Tool.</description>
        <label>Production URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Provisioned_Roles__c</fullName>
        <description>Agent Roles Provisioned for Tool Access</description>
        <label>Provisioned Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AAG AEL</fullName>
                </value>
                <value>
                    <fullName>AAG BDM Sales Consultant</fullName>
                </value>
                <value>
                    <fullName>AAG Care Mgr</fullName>
                </value>
                <value>
                    <fullName>AAG Cloud PAP Coach Mgr</fullName>
                </value>
                <value>
                    <fullName>AAG Coach Mgr</fullName>
                </value>
                <value>
                    <fullName>AAG Executive</fullName>
                </value>
                <value>
                    <fullName>AAG Partner Coach Mgr</fullName>
                </value>
                <value>
                    <fullName>AAG Partner Mgr</fullName>
                </value>
                <value>
                    <fullName>AAG Sales Consultant</fullName>
                </value>
                <value>
                    <fullName>AAG Sales Mgr</fullName>
                </value>
                <value>
                    <fullName>AAG Service</fullName>
                </value>
                <value>
                    <fullName>AAG Support</fullName>
                </value>
                <value>
                    <fullName>AAG Support and Service</fullName>
                </value>
                <value>
                    <fullName>Accountant Phone Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Accountant Phone Sales Mgr</fullName>
                </value>
                <value>
                    <fullName>Acctnt Executive</fullName>
                </value>
                <value>
                    <fullName>Acctnt IB Mgr</fullName>
                </value>
                <value>
                    <fullName>Acctnt Inbound Consultant</fullName>
                </value>
                <value>
                    <fullName>Acctnt ISAM Consultant</fullName>
                </value>
                <value>
                    <fullName>Acctnt Mgr ISAM</fullName>
                </value>
                <value>
                    <fullName>Acctnt Sales Leader</fullName>
                </value>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Agent Online Care</fullName>
                </value>
                <value>
                    <fullName>AgentTier1</fullName>
                </value>
                <value>
                    <fullName>APD Administrator</fullName>
                </value>
                <value>
                    <fullName>APD Sales Leader</fullName>
                </value>
                <value>
                    <fullName>APD Sales Manager</fullName>
                </value>
                <value>
                    <fullName>APD Sales Rep</fullName>
                </value>
                <value>
                    <fullName>AUS BDM Acctnt</fullName>
                </value>
                <value>
                    <fullName>AUS BDM Bookkeeper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>STG_URL__c</fullName>
        <description>STG URL for the Agent Tool</description>
        <label>STG URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SYS_URL__c</fullName>
        <description>SYS (DEV, MDEV, FUNC, SYS, all others) URL for Agent Tool.</description>
        <label>SYS URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>The sort order for an Agent Tool.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Agent_Tool_Label__c</columns>
        <columns>Category_Label__c</columns>
        <columns>Category__c</columns>
        <columns>Open_Link_In__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Active__c</columns>
        <columns>Provisioned_Roles__c</columns>
        <columns>Production_URL__c</columns>
        <columns>STG_URL__c</columns>
        <columns>PERF_URL__c</columns>
        <columns>SYS_URL__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Agent_Tool_Label__c</field>
            <operation>contains</operation>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Onboarding_Payroll_Tools</fullName>
        <columns>NAME</columns>
        <columns>Agent_Tool_Label__c</columns>
        <columns>Category__c</columns>
        <columns>Category_Label__c</columns>
        <columns>Active__c</columns>
        <columns>Production_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Provisioned_Roles__c</field>
            <operation>includes</operation>
            <value>Onboard Assd Payroll Consultant</value>
        </filters>
        <filters>
            <field>Provisioned_Roles__c</field>
            <operation>includes</operation>
            <value>Onboard FSP Payroll Consultant</value>
        </filters>
        <label>Onboarding-Payroll Tools</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PTG_Core_Tools</fullName>
        <columns>NAME</columns>
        <columns>Agent_Tool_Label__c</columns>
        <columns>Category_Label__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Open_Link_In__c</columns>
        <columns>Active__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category_Label__c</field>
            <operation>equals</operation>
            <value>Core Tools</value>
        </filters>
        <label>PTG Core Tools</label>
        <sharedTo>
            <role>Sales_Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PTG_Help_Content</fullName>
        <columns>NAME</columns>
        <columns>Agent_Tool_Label__c</columns>
        <columns>Category_Label__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Open_Link_In__c</columns>
        <columns>Active__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category_Label__c</field>
            <operation>equals</operation>
            <value>Help Content</value>
        </filters>
        <label>PTG Help Content</label>
        <sharedTo>
            <role>Sales_Executive</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PTG_Other_Tools</fullName>
        <columns>NAME</columns>
        <columns>Agent_Tool_Label__c</columns>
        <columns>Category_Label__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Open_Link_In__c</columns>
        <columns>Active__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category_Label__c</field>
            <operation>equals</operation>
            <value>Other Tools</value>
        </filters>
        <label>PTG Other Tools</label>
        <sharedTo>
            <role>Sales_Executive</role>
        </sharedTo>
    </listViews>
</CustomObject>